# C_CPP_Projects

./: README.md
projects/avl_set_graph_csr_cpp/: README.md
projects/flt_reader/: README.md  main.cpp
projects/graphics_cpp/: README.md
projects/graphics_refactored/: README.md  test.cpp
projects/hashtable_cache_matrix_cpp/: README.md
projects/labs_c/: README.md
projects/labs_c/arctan/: README.md  lab2.c  tests.md
projects/labs_c/console_space_invaders/: README.md  lab6.c  pos.h  queue.c  queue.h
projects/labs_c/parse_strings/: README.md  generate.c  generate.h  item.h  lab5.c  lab5_bench.c  queue.c  queue.h  stack.c  stack.h  work.c  work.h
projects/labs_c/sort_strings/: README.md  cmp.c  cmp.h  getdata.c  getdata.h  lab4.c  sort.c  sort.h  workdata.c  workdata.h
projects/labs_c/sq_equation/: README.md  lab0.c
projects/labs_c/work_with_numbers/: README.md  lab1.c
projects/labs_c/work_with_strings/: README.md  lab3.c  mylab3.c  mystring.c  mystring.h
projects/parallel/: README.md
projects/parallel/mpi/: README.md
projects/parallel/mpi/collective/: CMakeLists.txt  main.cpp  methods.cpp  methods.hpp  run.sh
projects/parallel/mpi/point2point/: main.cpp  methods.cpp  methods.hpp
projects/parallel/threads/: CMakeLists.txt  README.md  main.cpp  methods.cpp  methods.hpp
projects/parallel/win_thread_process/: README.md
projects/parallel/win_thread_process/process/: CMakeLists.txt  README.md  child.cpp  main.cpp  methods.cpp  methods.hpp
projects/sort_c/: README.md
projects/sort_cpp/: README.md
projects/vector_list_cpp/: README.md
(+5 files in other folders)
